test/functions/resolution/errors/testBadCallCandidates.9.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:100: error: unresolved call 'baz(42)'
testBadCallCandidates.chpl:68: note: this candidate did not match: baz(x: C)
testBadCallCandidates.chpl:100: note: because actual argument #1 with type 'int(64)'
testBadCallCandidates.chpl:68: note: is passed to formal 'x: C'
note: there is also 1 other candidate, use --print-all-candidates to see it
